--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
@@ -24,6 +25,7 @@
         "test": "tests"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.11",
         "ansi-regex": "^5.0.1",
         "ansi-styles": "^4.3.0",
         "asynckit": "^0.4.0",
