--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-*.log
-.DS_Store
+# Laravel & PHP
+/vendor/
+node_modules/
+bootstrap/cache/
+storage/*.key
+storage/app/public
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+storage/logs/*
+
+# Environment files
 .env
 .env.backup
+.env.local
 .env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
+.env.staging
+
+# Compiled assets
 /public/hot
 /public/storage
-/storage/*.key
-/storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
+/public/mix-manifest.json
+/public/css/*.css.map
+/public/js/*.js.map
+
+# IDE & OS specific
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 Thumbs.db
+desktop.ini
+
+# Testing
+.phpunit.result.cache
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Misc
+composer.lock
+package-lock.json
